misaligned header fix

--- a/styles.css
+++ b/styles.css
@@ -1307,15 +1307,11 @@ textarea {
 }
 
 .cv__services h1{
-  background-color: #3EB489;
-  background-size: 100%;
-  margin-bottom: 3rem;
-  margin-top: 2rem;
+  color: #3EB489;
   font-size: 2.5rem;
-  -webkit-background-clip: text;
-  -moz-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  -moz-text-fill-color: transparent;
+  margin-top: 3.5rem;
+  padding-top: 6rem;
+  margin-bottom: 3rem;
 }
 
 .cv-services__container {
